| \ | | ___   | \ | | __ _ _ __ ___   ___   / ___| __ _ _ __ ___   ___  ___ 
|  \| |/ _ \  |  \| |/ _` | '_ ` _ \ / _ \ | |  _ / _` | '_ ` _ \ / _ \/ __|
| |\  | (_) | | |\  | (_| | | | | | |  __/ | |_| | (_| | | | | | |  __/\__ \
|_| \_|\___/  |_| \_|\__,_|_| |_| |_|\___|  \____|\__,_|_| |_| |_|\___||___/
                             Changelog & About

----------------------------------ABOUT US----------------------------------
This site was started with one vision: cut out the unnecessary stuff and st-
ick to what people care about; unblocked games. No Name Games is the most a-
dvanced unblocked games website, utilizing the best bypassing techniques, p-
aired with the best functionality. Most unblocked games websites  are  built
with Elmer's glue and prayers, whilst No Name Games has stayed on top of the
game since we started. We've been going strong since November of 2024, gett-
ing around every obstacle placed in our way in a matter of hours. We haven't
been stopped yet and it won't happen anytime soon. No Name Games was made by
an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
05/07/2025:
[+] Re-added every game from the OG No Name Games.

04/16/2025:
[+] Swapped Bad Ice Cream from Ruffle to waflash, making it less laggy.

04/15/2025:
[+] Added edubrain.ai
[+] Fixed "Roblox Obby"
[+] Made my email a little more visible

04/14/2025:
[+] Fixed Red vs. Blue

04/13/2025:
[+] Fixed You vs. 100 Skibidi (greatest game of all time)
[+] Fixed Counter Strike

04/04/2025:
[+] Added Bad Ice Cream
[-] Removed the 'version' stuff. It's a little too annoying.

04/03/2025:
[+] Added a changelog.
[!] Thats about it.
