@@ -20,6 +20,10 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+05/08/2025:
+[+] Fixed the games not showing up. I pushed the last update and just
+assumed it worked, sorry!
+
 05/07/2025:
 [+] Re-added every game from the OG No Name Games.
 
